fix(release): qualify v1 client trust and failure recovery (#49)
* fix(release): qualify v1 client trust and failure recovery

* chore(release): normalize qualification probe file ending

* fix(security): reject noncanonical CORS default ports

* fix(release): harden Cognito admission and artifact identity

- COGNITO requires string client_id in the issuer's explicit
  allowed-client-ids (primary and each additional issuer); an empty
  allowlist fails startup. GENERIC does not require client_id.
- token-profile is mandatory for bound configuration (primary and
  additional issuers); omission no longer becomes GENERIC. Compose
  requires it; Platform CI and Kubernetes fixtures pass GENERIC.
- Only the typed identity-persistence failure maps to 503 with
  Retry-After: 1; unexpected identity-resolution defects return a
  sanitized 500 without retry advice. Unbound identity stays 401.
- Image tag 1.0.0 in Compose/Kubernetes/Platform CI; CI builds with
  APP_VERSION and VCS_REF=GITHUB_SHA and asserts both OCI labels.
- Docs and qualification report updated. No migration changes.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>

* fix(release): restore identity failure boundaries

- Users persistence failures stay internal: ResolveExternalIdentityService
  translates ExternalIdentityBindingPersistenceException into the Users API
  ExternalIdentityResolutionUnavailableException; ResolveAuthenticatedUserService
  translates that into the Security AuthenticatedUserResolutionUnavailableException;
  the JWT converter maps only the Security type to temporarily_unavailable (503).
- Remove the identity-persistence-failure named interface; an ArchUnit guard
  (including caught exception types) allows Security only the accepted
  TrustedExternalIdentityProviders SPI from Users port.out.
- Remove the test-only GENERIC token-profile fallback; each fixture declares
  its profile explicitly.
- Platform CI builds with a literal APP_VERSION=1.0.0 and checks the OCI
  version label 